# typicle

./: LICENSE.txt  MANIFEST.in  README.md  pyproject.toml  setup.cfg
typicle/: __init__.py  convert.py  types.yml
