[metadata]
name = typicle
author = Jacan Chaplais
author_email = jacanchaplais@gmail.com
description = Consistent data types for particle physics data.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/jacanchaplais/typicle
license = BSD 3-Clause License
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
[options]
packages = typicle
install_requires =
    pyyaml
include_package_data = True
